# pydantic-tools

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-app.yml
pydantic_tools/i18n/: __init__.py  __main__.py
pydantic_tools/i18n/locales/: zh_cn.py
src/i18n/: __init__.py  __main__.py  model.py  templates.py  translate.py
src/i18n/locales/: templates.py
tests/: test_i18n.py
tmp/: translate.py
