
[project]
name = "pydantic_tools"
version = "0.3.1"
description = "Useful tools for pydantic"
authors = [
    {name = "icebear", email = "iiiicebeaaaar@gmail.com"},
]
dependencies = [
    "pydantic>=1.10.7",
    "pytest>=7.3.1",
    "rich>=13.3.5",
    "bullet>=2.2.0",
    "click>=8.1.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "autoflake>=2.1.1",
    "pygoogletranslation>=2.0.6",
    "googletrans==4.0.0-rc1",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.3.2",
    "tox-pdm>=0.6.1",
]

[tool.coverage.run]
omit = [
    "pydantic_tools/i18n/__main__.py",
    "pydantic_tools/alias/*"
]